# USA-Football-League-Scouting-Combine-XLV

./: Cargo.toml  README.md
.github/workflows/: release.yaml
assets/audio/: will.sfxr
assets/models/: bill.glb  combine.glb  corn.glb  corn_low.glb  enemy.glb  football.glb  maze.glb  maze_01.glb  person.glb  person_blood.glb  random_01.glb  random_02.glb  will.glb
assets/shaders/: fresnel.wgsl  post_processing.wgsl  texture.wgsl
files/: New Project(2).psd  combine.blend  combine.blend1  corn.blend  corn.blend1  football.blend  football.blend1  harvested_corn.blend  maze.blend  maze.blend1  other_persons.blend  other_persons.blend1  person.blend  person.blend1
src/: asset_loading.rs  assets.rs  audio.rs  banter.rs  billboard.rs  collision.rs  combine.rs  component_adder.rs  cutscene.rs  direction.rs  enemy.rs  football.rs  game_camera.rs  game_controller.rs  game_state.rs  ingame.rs  ingame_ui.rs  level_over.rs  main.rs  maze.rs  menus.rs  options.rs  other_persons.rs  player.rs  shaders.rs  splash.rs  title_screen.rs  ui.rs  wasm.rs
src/ui/: text_size.rs
wasm/: index.html
